# mbid_to_lidarr

./: .gitignore  README.md  artists.txt  env.example  pyproject.toml  requirements.txt
src/mbid_to_lidarr/: get_musicbrainz_ids.py  lidarr_add.py  lidarr_bulk.py  spotify_export.py
src/mbid_to_lidarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
